--- a/historia.css
+++ b/historia.css
@@ -5,6 +5,7 @@ background-color:rgb(32, 61, 129) ;
 height:auto;
 margin-left:1%;
 margin-right: 1%;
+margin-bottom: 1%;
 padding:1%;
 border-bottom-right-radius: 20%;
 text-align:center;
@@ -21,7 +22,7 @@ margin-right:1%;
 .divjugadores{
 display: flex;
 background-color:rgb(32, 61, 129) ;
-border-top-left-radius: 20%;
+border-top-right-radius: 20%;
 margin-left:1%;
 margin-right:1%;
 }
@@ -32,6 +33,8 @@ margin-right:1%;
     text-align: center;
     padding:1%;
     width:92%;
+    text-decoration:underline;
+    font-size:200%;
 }
 
 
@@ -41,6 +44,8 @@ color:rgb(255, 255, 255);
     text-align: center;
     padding:1%;
     width:92%;
+    text-decoration:underline;
+    font-size:200%;
 }
 
 .h1primerosanos{
@@ -109,7 +114,6 @@ margin-left:1%;
 margin-right: 1%;
 padding:1%;
 margin-bottom:1%;
-border-top-right-radius: 20%;
 border-bottom-left-radius: 20%;
 text-align:center;
 }
@@ -189,17 +193,34 @@ color:white;
      font-size: large;
 }
 
+a:hover{
+
+color:rgb(255, 153, 0) ;
+}
+
+a:visited{
+color: rgb(255, 230, 0);
+}
+
+a{
+    color:rgb(120, 113, 255);
+}
+
 .footercontacto{
     background-color:rgb(120, 113, 255);
     color:white;
     text-align: center;
     height: 20%;
     width:98%;
-    border-top-right-radius: 20%;
+    border-top-left-radius: 20%;
     margin-right: 1%;
     margin-left: 1%;
     padding-top:1%;
     padding-bottom: 1%;
+}
+
+.h3footer{
+    font-size:150%;
 }
 
 #contacto{
@@ -223,6 +244,7 @@ color:white;
     height:20%;
     margin-left:10%;
     margin-right:10%;
+    padding-top:1%;
     background-color:rgb(255, 255, 255);
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
@@ -247,7 +269,7 @@ color:white;
 .footercopy{
 background-color:rgb(120, 113, 255);
 color:rgb(32, 61, 129) ;
-border-bottom-left-radius: 20%;
+border-bottom-right-radius: 20%;
 height: 20%;
 width:98%;
 margin-right: 1%;
@@ -279,8 +301,11 @@ border-top-left-radius: 20%;
     width: 30%;
     height: 30%;
     margin-left:4%;
+    padding-top:1%;
+    padding-bottom:1%;
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20px; 
+    list-style-type: none;
 }
 .navheader{
      background-color:rgb(255, 230, 0);
@@ -293,5 +318,27 @@ border-top-left-radius: 20%;
     margin-right:1%;
     margin-top: 15px;
     margin-bottom:15px;
+    display:flex;
 
 }
+
+.navgihun{
+background-color:rgb(32, 61, 129) ;
+margin-left:22%;
+width:30%;
+margin-top:1%;
+margin-bottom:1%;
+padding-top:2%;
+padding-bottom:2%;
+border-bottom-left-radius: 20%;
+border-top-right-radius:20% ;
+display:flex;
+}
+
+ .gihun{
+justify-content:center;
+margin-left:25%;
+width:50%;
+border-bottom-left-radius: 20%;
+border-top-right-radius:20% ;
+ }
