--- a/formulario.css
+++ b/formulario.css
@@ -1,3 +1,118 @@
+.encabezadoformulario{
+    background-color:rgb(120, 113, 255);
+    color: white;
+    margin-left:1%;
+    margin-right:1%;
+    padding:1%;
+    border-top-left-radius:20%;
+    border-bottom-right-radius:20%;
+}
+
+form{
+    background-color:rgb(32, 61, 129) ;
+    color: rgb(255, 255, 255) ;
+    margin:1%;
+    padding:8%;
+    border-top-right-radius:20%;
+    border-bottom-left-radius:20%;
+}
+
+article{
+    background-color:rgb(255, 230, 0);
+    margin:1%;
+    padding:1%;
+    border-top-right-radius:20%;
+    border-bottom-left-radius:20%;
+}
+
+input[type="text"]:focus{
+ background-color:rgb(255, 230, 0);
+}
+
+input[type="email"]:focus{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="tel"]:focus{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="number"]:focus{
+background-color:rgb(255, 230, 0);
+}
+
+textarea:focus{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="datetime-local"]:focus{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="submit"]:focus{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="reset"]:focus{
+background-color:rgb(255, 230, 0);
+}
+input[type="submit"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="reset"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="text"]:hover{
+ background-color:rgb(255, 230, 0);
+}
+
+input[type="email"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="tel"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="number"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+textarea:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="datetime-local"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+input[type="submit"]:hover{
+background-color:rgb(255, 230, 0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 *{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
      font-size: large;
@@ -12,9 +127,6 @@ a:visited{
 color: rgb(255, 230, 0);
 }
 
-a{
-    color:rgb(120, 113, 255);
-}
 
 
 .footercontacto{
@@ -90,29 +202,13 @@ padding-bottom: 1%;
 text-align:center;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 header{
 background-color:rgb(120, 113, 255);
 color: white;
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-font-size: large;
+
+font-weight:bold;
 height:20% ;
 width: 98%;
 margin-left:1%;
@@ -121,6 +217,10 @@ padding-top:1%;
 padding-bottom: 1%;
 border-bottom-right-radius: 20%;
 border-top-left-radius: 20%;
+}
+
+.h1header, .h2header{
+font-size:200%;
 }
 
 .enlaces {
