--- a/formulario.css
+++ b/formulario.css
@@ -167,6 +167,7 @@ color: rgb(255, 230, 0);
     height:20%;
     margin-left:10%;
     margin-right:10%;
+    margin-bottom: 1%;
     padding-top:1%;
     background-color:rgb(255, 255, 255);
     border-top-right-radius: 20%;
@@ -207,7 +208,6 @@ background-color:rgb(120, 113, 255);
 color: white;
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 font-weight:bold;
 height:20% ;
 width: 98%;
@@ -229,12 +229,16 @@ font-size:200%;
     width: 30%;
     height: 30%;
     margin-left:4%;
+    margin-top:5%;
     padding-top:1%;
-    padding-bottom:2%;
+    padding-bottom:1%;
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20px; 
     list-style-type: none;
+
 }
+
+
 .navheader{
      background-color:rgb(255, 230, 0);
      border: solid 10px rgb(255, 230, 0);
