--- a/historia.css
+++ b/historia.css
@@ -78,6 +78,18 @@ border-bottom-right-radius: 20%;
 background-color:rgb(120, 113, 255);
 }
 
+.madridxx{
+
+margin-bottom:10%;
+border-bottom-right-radius: 20%;
+border-top-left-radius:20% ;
+}
+
+.bernabeuxx{
+border-bottom-right-radius: 20%;
+border-top-left-radius:20% ;
+}
+
 .fundacioncolores{
 display: flex;
 width:92%;
@@ -244,6 +256,7 @@ a{
     height:20%;
     margin-left:10%;
     margin-right:10%;
+    margin-bottom: 1%;
     padding-top:1%;
     background-color:rgb(255, 255, 255);
     border-top-right-radius: 20%;
@@ -293,6 +306,10 @@ padding-top:1%;
 padding-bottom: 1%;
 border-bottom-right-radius: 20%;
 border-top-left-radius: 20%;
+}
+
+.h1header, .h2header{
+font-size:200%;
 }
 
 .enlaces {
