--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -8,6 +8,7 @@
     border-bottom-right-radius:20%;
 }
 
+
 form{
     background-color:rgb(32, 61, 129) ;
     color: rgb(255, 255, 255) ;
@@ -17,6 +18,7 @@ form{
     border-bottom-left-radius:20%;
 }
 
+
 article{
     background-color:rgb(255, 230, 0);
     margin:1%;
@@ -25,33 +27,41 @@ article{
     border-bottom-left-radius:20%;
 }
 
+
 input[type="text"]:focus{
  background-color:rgb(255, 230, 0);
 }
+
 
 input[type="email"]:focus{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="tel"]:focus{
 background-color:rgb(255, 230, 0);
 }
+
 
 input[type="number"]:focus{
 background-color:rgb(255, 230, 0);
 }
 
+
 textarea:focus{
 background-color:rgb(255, 230, 0);
 }
+
 
 input[type="datetime-local"]:focus{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="submit"]:focus{
 background-color:rgb(255, 230, 0);
 }
+
 
 input[type="reset"]:focus{
 background-color:rgb(255, 230, 0);
@@ -60,37 +70,67 @@ input[type="submit"]:hover{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="reset"]:hover{
 background-color:rgb(255, 230, 0);
 }
+
 
 input[type="text"]:hover{
  background-color:rgb(255, 230, 0);
 }
 
+
 input[type="email"]:hover{
 background-color:rgb(255, 230, 0);
 }
+
 
 input[type="tel"]:hover{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="number"]:hover{
 background-color:rgb(255, 230, 0);
 }
+
 
 textarea:hover{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="datetime-local"]:hover{
 background-color:rgb(255, 230, 0);
 }
 
+
 input[type="submit"]:hover{
 background-color:rgb(255, 230, 0);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -118,14 +158,42 @@ background-color:rgb(255, 230, 0);
      font-size: large;
 }
 
+
+.belen{
+border-radius:50px;
+background-color: rgb(255, 0, 0);
+width: 80px;
+height: 80px;
+position: fixed;
+bottom: 0;
+right: 0;
+}
+
+.belenfoto{
+border-radius:50px;
+width: 80px;
+height: 80px;
+}
+
+
 a:hover{
+
 
 color:rgb(255, 153, 0) ;
 }
 
+
 a:visited{
 color: rgb(255, 230, 0);
 }
+
+
+a{
+    color:rgb(120, 113, 255);
+}
+
+
+
 
 
 
@@ -142,9 +210,11 @@ color: rgb(255, 230, 0);
     padding-bottom: 1%;
 }
 
+
 .h3footer{
     font-size:150%;
 }
+
 
 #contacto{
     background-color:rgb(120, 113, 255);
@@ -158,7 +228,9 @@ color: rgb(255, 230, 0);
     padding-bottom:1%;
     display:flex;
 
+
 }
+
 
 .cajasfooter1{
     justify-content: center;
@@ -173,7 +245,9 @@ color: rgb(255, 230, 0);
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
 
+
 }
+
 
 .cajasfooter2{
     justify-content: center;
@@ -190,6 +264,8 @@ color: rgb(255, 230, 0);
 }
 
 
+
+
 .footercopy{
 background-color:rgb(120, 113, 255);
 color:rgb(32, 61, 129) ;
@@ -202,6 +278,7 @@ padding-top:1%;
 padding-bottom: 1%;
 text-align:center;
 }
+
 
 header{
 background-color:rgb(120, 113, 255);
@@ -219,9 +296,11 @@ border-bottom-right-radius: 20%;
 border-top-left-radius: 20%;
 }
 
+
 .h1header, .h2header{
 font-size:200%;
 }
+
 
 .enlaces {
     background-image: url("images/champions.png");
@@ -229,14 +308,19 @@ font-size:200%;
     width: 30%;
     height: 30%;
     margin-left:4%;
-    margin-top:5%;
+    margin-top:3%;
+
+
     padding-top:1%;
     padding-bottom:1%;
     border-top-right-radius: 20%;
-    border-bottom-left-radius: 20px; 
+    border-bottom-left-radius: 20px;
     list-style-type: none;
 
+
 }
+
+
 
 
 .navheader{
@@ -252,7 +336,9 @@ font-size:200%;
     margin-bottom:15px;
     display:flex;
 
+
 }
+
 
 .navgihun{
 background-color:rgb(255, 255, 255) ;
@@ -266,6 +352,7 @@ border-bottom-left-radius: 20%;
 border-top-right-radius:20% ;
 display:flex;
 }
+
 
  .gihun{
 justify-content:center;
