--- a/styles/historia.css
+++ b/styles/historia.css
@@ -1,5 +1,3 @@
-
-
 #fundacion{
 background-color:rgb(32, 61, 129) ;
 height:auto;
@@ -11,6 +9,7 @@ border-bottom-right-radius: 20%;
 text-align:center;
 }
 
+
 .divfundacion{
 display: flex;
 background-color:rgb(32, 61, 129) ;
@@ -19,6 +18,7 @@ margin-left:1%;
 margin-right:1%;
 }
 
+
 .divjugadores{
 display: flex;
 background-color:rgb(32, 61, 129) ;
@@ -26,6 +26,7 @@ border-top-right-radius: 20%;
 margin-left:1%;
 margin-right:1%;
 }
+
 
 .h3jugadores{
     color:rgb(255, 255, 255);
@@ -38,6 +39,8 @@ margin-right:1%;
 }
 
 
+
+
 .h3fundacion{
 color:rgb(255, 255, 255);
     justify-content:center;    
@@ -48,9 +51,11 @@ color:rgb(255, 255, 255);
     font-size:200%;
 }
 
+
 .h1primerosanos{
     color:rgb(255, 255, 255);
 }
+
 
 .fundacionprimerosanos{
 display: flex;
@@ -60,12 +65,14 @@ margin:1%;
 padding:1%;
 }
 
+
 .fundacioncaja1{
 justify-content: center;
 align-items: center;
 color: rgb(255, 230, 0);
 margin-left:5%;
 }
+
 
 .fundacioncaja2{
 align-content: center;
@@ -78,17 +85,21 @@ border-bottom-right-radius: 20%;
 background-color:rgb(120, 113, 255);
 }
 
+
 .madridxx{
+
 
 margin-bottom:10%;
 border-bottom-right-radius: 20%;
 border-top-left-radius:20% ;
 }
 
+
 .bernabeuxx{
 border-bottom-right-radius: 20%;
 border-top-left-radius:20% ;
 }
+
 
 .fundacioncolores{
 display: flex;
@@ -98,11 +109,13 @@ margin:1%;
 padding:1%;
 }
 
+
 .colorescaja1{
 justify-content: center;
 align-items: center;
 color: rgb(255, 230, 0);
 }
+
 
 .colorescaja2{
 align-content: center;
@@ -115,9 +128,11 @@ border-bottom-right-radius: 20%;
 background-color:rgb(120, 113, 255);
 }
 
+
 .h4fundacioncolores{
     color:white;
 }
+
 
 #jugadores{
 background-color:rgb(32, 61, 129) ;
@@ -130,6 +145,7 @@ border-bottom-left-radius: 20%;
 text-align:center;
 }
 
+
 .mejoresjugadores{
 display: flex;
 width:92%;
@@ -138,11 +154,13 @@ margin:1%;
 padding:1%;
 }
 
+
 .jugadorescaja1{
 justify-content: center;
 align-items: center;
 color: rgb(255, 230, 0);
 }
+
 
 .jugadorescaja2{
 align-content: center;
@@ -155,6 +173,7 @@ border-bottom-left-radius: 20%;
 background-color:rgb(120, 113, 255);
 }
 
+
 .iconosblancos{
 display: flex;
 width:92%;
@@ -163,12 +182,14 @@ margin:1%;
 padding:1%;
 }
 
+
 .iconoscaja1{
 justify-content: center;
 align-items: center;
 color: rgb(255, 230, 0);
 margin-left:5%;
 }
+
 
 .iconoscaja2{
 align-content: center;
@@ -181,13 +202,32 @@ border-bottom-left-radius: 20%;
 background-color:rgb(120, 113, 255);
 }
 
+
 .h4iconosblancos{
 color:white;
+margin-left:35%;
+margin-top:5%;
+font-size:120%;
 }
+
 
 .h4mejoresjugadores{
 color:white;
+margin-right:40%;
+font-size:120%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -205,18 +245,39 @@ color:white;
      font-size: large;
 }
 
+
+.belen{
+border-radius:50px;
+background-color: rgb(255, 0, 0);
+width: 80px;
+height: 80px;
+position: fixed;
+bottom: 0;
+right: 0;
+}
+
+.belenfoto{
+border-radius:50px;
+width: 80px;
+height: 80px;
+}
+
 a:hover{
+
 
 color:rgb(255, 153, 0) ;
 }
+
 
 a:visited{
 color: rgb(255, 230, 0);
 }
 
+
 a{
     color:rgb(120, 113, 255);
 }
+
 
 .footercontacto{
     background-color:rgb(120, 113, 255);
@@ -231,9 +292,11 @@ a{
     padding-bottom: 1%;
 }
 
+
 .h3footer{
     font-size:150%;
 }
+
 
 #contacto{
     background-color:rgb(120, 113, 255);
@@ -247,7 +310,9 @@ a{
     padding-bottom:1%;
     display:flex;
 
+
 }
+
 
 .cajasfooter1{
     justify-content: center;
@@ -262,7 +327,9 @@ a{
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
 
+
 }
+
 
 .cajasfooter2{
     justify-content: center;
@@ -279,6 +346,8 @@ a{
 }
 
 
+
+
 .footercopy{
 background-color:rgb(120, 113, 255);
 color:rgb(32, 61, 129) ;
@@ -291,6 +360,7 @@ padding-top:1%;
 padding-bottom: 1%;
 text-align:center;
 }
+
 
 header{
 background-color:rgb(120, 113, 255);
@@ -308,9 +378,11 @@ border-bottom-right-radius: 20%;
 border-top-left-radius: 20%;
 }
 
+
 .h1header, .h2header{
 font-size:200%;
 }
+
 
 .enlaces {
     background-image: url("images/champions.png");
@@ -321,7 +393,7 @@ font-size:200%;
     padding-top:1%;
     padding-bottom:1%;
     border-top-right-radius: 20%;
-    border-bottom-left-radius: 20px; 
+    border-bottom-left-radius: 20px;
     list-style-type: none;
 }
 .navheader{
@@ -337,7 +409,9 @@ font-size:200%;
     margin-bottom:15px;
     display:flex;
 
+
 }
+
 
 .navgihun{
 background-color:rgb(32, 61, 129) ;
@@ -352,6 +426,7 @@ border-top-right-radius:20% ;
 display:flex;
 }
 
+
  .gihun{
 justify-content:center;
 margin-left:25%;
@@ -359,3 +434,4 @@ width:50%;
 border-bottom-left-radius: 20%;
 border-top-right-radius:20% ;
  }
+
