--- a/styles/index.css
+++ b/styles/index.css
@@ -3,18 +3,40 @@
      font-size: large;
 }
 
+
+.belen{
+border-radius:50px;
+background-color: rgb(255, 0, 0);
+width: 80px;
+height: 80px;
+position: fixed;
+bottom: 0;
+right: 0;
+}
+
+.belenfoto{
+border-radius:50px;
+width: 80px;
+height: 80px;
+}
+
+
 a:hover{
+
 
 color:rgb(255, 153, 0) ;
 }
+
 
 a:visited{
 color: rgb(255, 230, 0);
 }
 
+
 a{
     color:rgb(120, 113, 255);
 }
+
 
 .footercontacto{
     background-color:rgb(120, 113, 255);
@@ -30,9 +52,11 @@ a{
     padding-bottom: 1%;
 }
 
+
 .h3footer{
     font-size:150%;
 }
+
 
 #contacto{
     background-color:rgb(120, 113, 255);
@@ -46,7 +70,9 @@ a{
     padding-bottom:1%;
     display:flex;
 
+
 }
+
 
 .cajasfooter1{
     justify-content: center;
@@ -61,7 +87,9 @@ a{
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
 
+
 }
+
 
 .cajasfooter2{
     justify-content: center;
@@ -78,6 +106,8 @@ a{
 }
 
 
+
+
 .footercopy{
 background-color:rgb(120, 113, 255);
 color:rgb(32, 61, 129) ;
@@ -90,6 +120,7 @@ padding-top:1%;
 padding-bottom: 1%;
 text-align:center;
 }
+
 
 header{
 background-color:rgb(120, 113, 255);
@@ -107,9 +138,12 @@ border-bottom-right-radius: 20%;
 border-top-left-radius: 20%;
 }
 
+
 .h1header, .h2header{
 font-size:200%;
 }
+
+
 
 
 .enlaces {
@@ -119,17 +153,20 @@ font-size:200%;
     width: 30%;
     height: 30%;
     margin-left:4%;
+    margin-top:3%;
     border-top-right-radius: 20%;
-    border-bottom-left-radius: 20px; 
+    border-bottom-left-radius: 20px;
     list-style-type: none;
     padding-top: 1%;
     padding-bottom:1%;
 }
 
+
 .bernabeu{
     list-style-type: none;
     margin-left:150%;
 }
+
 
 .navheader{
      background-color:rgb(255, 230, 0);
@@ -144,7 +181,9 @@ font-size:200%;
     margin-bottom:15px;
     display:flex;
 
+
 }
+
 
 .section{
     background-color:rgb(32, 61, 129) ;
@@ -156,8 +195,9 @@ font-size:200%;
     margin-right:5%;
     border-bottom-right-radius: 20%;
     display:flex;
-    
+   
 }
+
 
 .divcontenedor{
 display: flex;
@@ -167,13 +207,18 @@ margin-left:1%;
 margin-right:1%;
 }
 
+
 .h1historia{  
     color:rgb(255, 255, 255);
     justify-content:center;    
     text-align: center;
     padding:1%;
     width:92%;
+    font-size:150%;
+
+
 }
+
 
 .presentacion{
     justify-content:center;
@@ -183,7 +228,9 @@ margin-right:1%;
     height:20%;
     margin:2%;
 
+
 }
+
 
 .main{
     display: flex;
@@ -197,6 +244,7 @@ margin-right:1%;
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20px;
 }
+
 
 .palmarestitulo{
     color:white;
@@ -212,8 +260,9 @@ margin-right:1%;
     border-bottom-left-radius: 20px;
 }
 
+
 .futurotitulo{
-    color:white;
+    color:rgb(32, 61, 129);
 }
 .futuro{
     background-color:rgb(255, 230, 0);
@@ -226,6 +275,7 @@ margin-right:1%;
     border-bottom-left-radius: 20px;
 }
 
+
 .svg{
     background-color: white;
     margin:5%;
@@ -237,7 +287,9 @@ margin-right:1%;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 
+
 }
+
 
 .aside{
 display: flex;
@@ -250,21 +302,26 @@ border-top-left-radius: 20%;
 border-bottom-right-radius:20%;
 }
 
+
 .enlacesdeinteres{
-justify-content:space-around;
-width:100%;
-height:20%;
-margin-left:13%;
+    margin-left:15%;
+    margin-right: 10%;
+}
+
+
+li{
+list-style-type: none;
+}
+
+
+
+
+.datoscuriosos{
 color:rgb(255, 230, 0);
 }
 
-.datoscuriosos{
-justify-content:space-around;
-width:100%;
-height:20%;
-color:rgb(255, 230, 0);
-}
 
 .asidetitulos{
     color:white;
+    text-align:center;
 }
